# Vehicle-Automation-Sim

./: CMakeLists.txt  README.md  main.cpp
InputUI/: InputUI.cpp  InputUI.h
Lane/: Lane.cpp  Lane.h
Screen/: Screen.cpp  Screen.h
Traffic/: Traffic.cpp  Traffic.h
Vehicle/: Vehicle.cpp  Vehicle.h
trafficlight/: TrafficLight.cpp  TrafficLight.h
